2017-08-08
==========
	VDFEditor-0.9.0-45
	- Support for .mp3 and .ogg sound files
	
2017-08-07
==========
	VDFEditor-0.9.0.44
	- Fixed bad sound quality in ADPCMCodec
	
2017-08-03
==========
	VDFEditor-0.9.0.43
	- Add support for multi-select on add sound dialog
	- Fix sorting of main list via drag&drop

2017-08-01
==========
	VDFEditor-0.9.0.42
	- Fixed add sound menu item for new empty VDF files
	
2017-07-31
==========
	HoTT-MdlViewer-JavaFX-0.9.0.134, HoTT-MdlViewer-Swing-0.9.0.102, HoTT-MdlViewer-SWT-0.9.0.89
	- Fix MC20Decoder. Allow all eight logical switches instead of only four.
	
2017-07-29
==========
	VDFEditor-0.9.0.40
	- Convert .wav files only when necessary
	
	VDFEditor-0.9.0.39
	- Apply low-pass filter for ADPCM playback
	
2017-07-28
==========
	VDFEditor-0.9.0.36
	- Updated VDFDecoder with information from Graupner
	
	VDFEditor-0.9.0.34
	- Adapt quantifier values for ADPCM codec to be compatible with FUS
	
2017-07-27
==========
	HoTT-MdlViewer-JavaFX-0.9.0.125, HoTT-MdlViewer-Swing-0.9.0.93, HoTT-MdlViewer-SWT-0.9.0.80
	- Added new PPM32 DSC output type for MC-28 and MC-26