@@ -22,8 +22,10 @@ vdf_type=VDF Type
 transmitter_type=Transmitter Type
 
 empty=<empty>
-modified=File was modified\\!
+modified=Warning\!\nThe VDF file was modified\\!
 save_changes=Do you want to save changes?
+save_button=Save changes
+discard_button=Discard changes
 
 wav_files=Wave
 mp3_files=MPEG Audio Layer III
