@@ -22,8 +22,10 @@ vdf_type=VDF Typ
 transmitter_type=Sendertyp
 
 empty=<leer>
-modified=VDF Datei wurde ver\u00E4ndert\!
-save_changes=\u00C4nderungen speichern?
+modified=Achtung\!\nDie VDF Datei wurde ver\u00E4ndert\!
+save_changes=M\u00F6chten Sie die \u00C4nderungen speichern?
+save_button=\u00C4nderungen speichern
+discard_button=\u00C4nderungen verwerfen
 
 wav_files=Wave
 mp3_files=MPEG Audio Layer III
